# version-controll

./: .gitignore  CMakeLists.txt  README.md  program.sh  your_program.sh
.script/: compile.sh  run.sh
src/: main.c
